force-app/main/default/objects/QuoteSegmentStruct__c/QuoteSegmentStruct__c.object-meta.xml
<CustomObject>
    <description>Quotes Segment Structure (by Managers, Groups, Regions)</description>
    <label>Quote Segment Structure</label>
    <nameField>
        <displayFormat>QSS-{00000000}</displayFormat>
        <label>QuoteSegmStruct</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes Segment Structure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>