force-app/main/default/objects/QuoteSegmentStruct__c/fields/Group3Struct__c.field-meta.xml
<CustomField>
    <fullName>Group3Struct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group 3 Structure</label>
    <type>Checkbox</type>
</CustomField>