force-app/main/default/objects/QuoteSegmentStruct__c/fields/ManagerStruct__c.field-meta.xml
<CustomField>
    <fullName>ManagerStruct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Structure</label>
    <type>Checkbox</type>
</CustomField>