force-app/main/default/objects/QuoteSegmentStruct__c/fields/RegionStruct__c.field-meta.xml
<CustomField>
    <fullName>RegionStruct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Region Structure</label>
    <type>Checkbox</type>
</CustomField>