force-app/main/default/objects/QuoteSegmentStruct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MarketSegment__c</columns>
    <columns>ManagerStruct__c</columns>
    <columns>RegionStruct__c</columns>
    <columns>Group3Struct__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>